﻿23.6.14
=======
 + Added "Enable Tearing" checkbox to Latent Sync control panel

23.6.13.3
=========
 + Added Reflex Flash trigger button
 + Added NvAPI PCL Init/Shutdown to logs

23.6.13.2
=========
 + Replaced deprecated NvAPI calls w/ new ones (only available in Windows 10+)
    >> Hopefully you have upgraded to 10, because NVIDIA does not support 8 :)

23.6.13.1
=========
 + Fixed not being able to disable SK's Reflex in games that aren't native Reflex

23.6.13
=======
 + Added detection for games that are natively using Reflex, so users cannot
     enable SK's implementation of Reflex at the same time.
 + Added PCL (PC Latency) ping event every 100 ms to enable PC latency readings
     on the GeForce Experience overlay.
 + Updated NvAPI to R525

23.6.12.3
=========
 + Added keybinds to Volume Management section of SK's control panel.
 + Fixed Allow Tearing not respecting system default value.

23.6.12.2
=========
 + Fixed mouse activation of game window not working when blocking Mouse Input.

23.6.12.1
=========
 + Added command console variables for sound volume/mute (applies only to game)

     Sound.Volume [0.0-100.0]
     Sound.Mute   {true|false}

    Intended use is keyboard macros (i.e. Ctrl+Shift+Insert=Sound.Volume ++)

23.6.12
=======
 + Changing Latent Sync on/off will restore original limiter mode preference

23.6.11.3
=========
 + Removed auto-low latency mode

23.6.11.2
=========
 + Fixed Latent Sync's Delay Bias setting applying to other limiter modes.
 + Fixed MPO warning showing up even if user did not have it enabled.

23.6.11.1
=========
 + Multiplane Overlay support in-game only counts RGB planes now.
 + Added INI option to warn if MPO support is broken.

     [Display.Monitor]
     WarnIfNoOverlayPlanes={true|false} (default: false)

    * If you want this feature, you should set it in master_SpecialK.ini

23.6.11
=======
 + The "Enable Tearing" SwapChain flag now controls the game's use of tearing
     as well...
